# Alam_et_al_2026

./: .gitignore  README.md  pyproject.toml
data/: Insitu_outlier_percentage_above_total_porosity_pre2023.csv  stations.xlsx
notebooks/: 01. Data Processing.ipynb  02. Calibration.py  02. Calibration.slurm  03. Calibration Plots.ipynb  04. Projection.py  04. Projection.slurm  05. Projection.ipynb  06. Projection Plots.ipynb  07. KDE.py  08. KDE.slurm
src/: initial_params.py  param_bounds.py  param_names.py  prediction.py  water_balance_jax.py  water_balance_jax_original.py
tables/: TableA2_final_loss_raw_sources_insitu7_metrics_stations_wide.csv  Table_A2_final_calibration_loss_raw_sources_insitu7.csv
